# rustrecon

./: .gitignore  Cargo.toml  DATABASE_CACHING.md  DEPLOYMENT_READINESS.md  INIT_FIXES.md  INSTALLATION.md  INSTALL_FROM_GITHUB.md  README.md  SETUP_GUIDE.md  SQLITE_CACHE_FIX.md  check_and_merge_branches.ps1  check_branches.bat  code_only_report.md  condensed_report.md  demo  demo_formats.bat  dependency_report.md  find_config.bat  security_report.md  setup_rustrecon.bat  test_api.rs  uninstall_rustrecon.bat
docs/: DATABASE_CACHING.md  INSTALLATION.md  QUICK_INSTALL.md  REPORT_FORMATS.md  installer-README.md
installer/: Cargo.toml  app.manifest  build.ps1  build.rs
installer/src/: main.rs
rustrecon/: .gitignore  Cargo.toml  DEPENDENCY_SCANNING_DEMO.md  build_test.bat  check_compilation.ps1  demo_offline.rs  rustrecon_config.toml.example  test_api.rs  test_cache.bat  test_cache.ps1  test_report2.md
rustrecon/src/: cached_llm_client.rs  cli.rs  config.rs  database.rs  dependency_scanner.rs  enhanced_init.rs  llm_client.rs  main.rs  rusqlite_cached_llm_client.rs  rusqlite_database.rs  scanner.rs  sqlite_test.rs
scripts/: build.bat  find_config.ps1  installer_demo.bat  test_cache.bat  test_cache.ps1  test_installer.bat  uninstall_rustrecon.ps1
src/: cli.rs  config.rs  dependency_scanner.rs  main.rs  report.rs  utils.rs
