[package]
name = "rustrecon-installer"
version = "1.0.0"
edition = "2021"
description = "Windows installer for RustRecon security scanner"
authors = ["RustRecon Team"]
license = "MIT"

[[bin]]
name = "install"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
tempfile = "3.8"
dirs = "5.0"
winreg = "0.52"
semver = "1.0"

[build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "handleapi",
    "winbase",
    "shellapi",
    "fileapi",
    "sysinfoapi",
    "winnt",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
