[package]
name = "rustrecon"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.23", features = [
    "json",
] } # Removed "blocking" feature as tokio is used for async
cargo_metadata = "0.23"
tree-sitter = "0.25.10"
tree-sitter-rust = "0.24.0"
async-trait = "0.1.89"
thiserror = "2.0.17"
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
toml = "0.9.7" # For parsing and generating TOML configuration files
dirs = "6.0.0" # For discovering standard directories like config_dir
walkdir = "2.5.0"
regex = "1.11.3"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
sha2 = "0.10"
